# microLSTM

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASE_REPORT.md  config.yaml  performance_optimizations.py  prepare_release.py  pyproject.toml  requirements.txt  setup.py  validate_integration.py
.kiro/specs/micro-lm/: design.md  requirements.md  tasks.md
examples/: README.md  __init__.py  configuration_examples.py  data_preparation.py  data_preparation_demo.py  model_inspection_demo.py  text_generation.py  text_generation_demo.py  training.py  training_demo.py
micro_lm/: __init__.py  data_utils.py  exceptions.py  generator.py  inspection.py  model.py  tokenizer.py  trainer.py
micro_lstm/: __init__.py  cli.py  data_loader.py  data_utils.py  exceptions.py  generator.py  inspection.py  model.py  tokenizer.py  trainer.py
setup/: setup_guide.py
src/: run.py
tests/: __init__.py  test_data_utils.py  test_error_handling.py  test_generator.py  test_inspection.py  test_integration.py  test_model.py  test_tokenizer.py  test_trainer.py
